fix: I guess just throw more layers at the problem

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,6 +6,6 @@ COPY . .
 
 RUN bash ./setup.sh
 
-RUN echo 'export NVM_DIR="$HOME/.nvm"'\
-'\n'\
-'[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"  # This loads nvm' >> "$HOME/.zshrc"
+RUN echo 'export NVM_DIR="$HOME/.nvm"'
+RUN echo '\n'
+RUN echo '[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"  # This loads nvm' >> "$HOME/.zshrc"
