fix: potentially address nvm access

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,3 +5,11 @@ WORKDIR /home/
 COPY . .
 
 RUN bash ./setup.sh
+
+RUN source $NVM_DIR/nvm.sh \
+    && nvm install $NODE_VERSION \
+    && nvm alias default $NODE_VERSION \
+    && nvm use default
+
+ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
+ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
