fix: compress RUN and ensure nvm exports are on a new line

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,8 +4,6 @@ WORKDIR /home/
 
 COPY . .
 
-RUN bash ./setup.sh
-
-RUN echo 'export NVM_DIR="$HOME/.nvm"'                                       >> "$HOME/.zshrc" \
-    echo '[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"  # This loads nvm' >> "$HOME/.zshrc" \
-    echo '[ -s "$NVM_DIR/bash_completion" ] && . "$NVM_DIR/bash_completion" # This loads nvm bash_completion' >> "$HOME/.zshrc"
+RUN bash ./setup.sh                                                                            \
+    echo -e 'export NVM_DIR="$HOME/.nvm"\n'                                  >> "$HOME/.zshrc" \
+    echo '[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"  # This loads nvm' >> "$HOME/.zshrc"
