--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,5 +9,8 @@
         "vscode-icons-team.vscode-icons",
         "visualstudioexptteam.vscodeintellicode"
     ],
-    "dockerFile": "Dockerfile"
+    "dockerFile": "Dockerfile",
+    "settings": {
+        "terminal.integrated.shell.linux": "/usr/bin/zsh"
+    }
 }
