fix: continue trying to address nvmrc config

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /home/
 
 COPY . .
 
-RUN bash ./setup.sh                                                                            \
-    echo -e 'export NVM_DIR="$HOME/.nvm"\n'                                  >> "$HOME/.zshrc" \
+RUN bash ./setup.sh
+
+RUN echo 'export NVM_DIR="$HOME/.nvm"'                                  >> "$HOME/.zshrc" \
+    echo -e '\n' >> "$HOME/.zshrc" \
     echo '[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"  # This loads nvm' >> "$HOME/.zshrc"
