--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,6 +6,6 @@ COPY . .
 
 RUN bash ./setup.sh
 
-RUN echo 'export NVM_DIR="$HOME/.nvm"'
-RUN echo '\n'
+RUN echo 'export NVM_DIR="$HOME/.nvm"' >> "$HOME/.zshrc"
+RUN echo '\n' >> "$HOME/.zshrc"
 RUN echo '[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"  # This loads nvm' >> "$HOME/.zshrc"
