fix: next try at a fix for dockerFile property value

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,5 +8,5 @@
         "eamodio.gitlens",
         "vscode-icons-team.vscode-icons"
     ],
-    "dockerFile": "."
+    "dockerFile": "Dockerfile"
 }
